...
                      _saveBooking();
                    }
                  }
            : null,
        child: _isSaving
            ? const CircularProgressIndicator(color: Colors.white)
            : Text(_currentStep == 2 ? "CONFIRMAR" : "PRÓXIMO",
                style:
                    TextStyle(color: canGoNext ? Colors.white : Colors.white24)),
      ),
    );
  }

...
        content: Column(
          mainAxisSize: MainAxisSize.min,
          children: [
            const Icon(Icons.check_circle_outline,
                color: Color(0xFFD32F2F), size: 80),
            const SizedBox(height: 20),
            const Text("Agendado!",
                style: TextStyle(
                    fontSize: 22,
                    fontWeight: FontWeight.bold,
                    color: Colors.white)),
            const SizedBox(height: 10),
            Text(
...
