...
            padding: const EdgeInsets.symmetric(horizontal: 24),
            sliver: SliverGrid.count(
              crossAxisCount: 2,
              mainAxisSpacing: 16,
              crossAxisSpacing: 16,
              children: [
                ServiceCard(label: "AGENDAR", icon: Icons.calendar_today_rounded, onTap: () {Navigator.pushNamed(context, '/booking');}),
                ServiceCard(label: "FIDELIDADE", icon: Icons.star_rounded, onTap: () {Navigator.pushNamed(context, '/loyalty');}),
                ServiceCard(label: "PRODUTOS", icon: Icons.shopping_bag_rounded, onTap: () {Navigator.pushNamed(context, '/products');}),
                
                // 4. MUDANÇA PRINCIPAL AQUI: O BOTÃO CONTATO AGORA TROCA A ABA!
                ServiceCard(label: "CONTATO", icon: Icons.phone_android_rounded, onTap: () {
                  if (widget.onNavigateToProfile != null) {
...
